# nauty

./: Cargo.toml  README.md  build.rs  wrapper.c  wrapper.h
src/: lib.rs  nauty.rs
